# icontext

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  cli.py  get.sh  install.sh  pyproject.toml  uninstall.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: gitleaks.toml  tiers.yml
connectors/: base.py  gmail.py  linkedin.py
demo/: README-demo.md  demo.sh  icontext-demo.cast
docs/: competitive-benchmark-2026-04-26.md  launch-positioning.md
hooks/: post-commit  pre-commit  pre-push  user-prompt-submit
launch/: COPY.md  codex-review.md  key-architecture-RECOMMENDATION.md  key-architecture-analysis.md  linkedin-card.html  linkedin-post.txt  vaultwarden-backup-DEPLOYED.md  vaultwarden-backup-plan-v2.md  vaultwarden-backup-plan.md  video-script-v2.txt
mcp/: server.py
scripts/: check_tiers.py  doctor.py  eval_retrieval.py  icontext_classify.py  indexlib.py  install_claude_integration.py  og-image.html  prompt_context.py  update_index.py
skills/fbrain-enrich/: SKILL.md
skills/fbrain-populate-profile/: SKILL.md
skills/fbrain-refresh-profile/: SKILL.md
skills/fbrain-share-card/: SKILL.md
skills/fbrain-write-fact/: SKILL.md
skills/icontext-populate-profile/: SKILL.md
skills/icontext-refresh-profile/: SKILL.md
skills/icontext-share-card/: SKILL.md
skills/icontext-write-fact/: SKILL.md
tests/: test_classifier.py  test_cli.py  test_connectors.py  test_doctor_fresh_install.py  test_index_mcp.py  test_skill_routing.py
workflows/: sensitivity.yml
