[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "fbrain"
version = "0.5.0"
description = "Persistent memory for AI coding tools: local, encrypted, built from your real data."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Federico de Ponte"}]
keywords = ["ai", "claude-code", "context", "memory", "mcp", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pypdf>=4",
]

[project.optional-dependencies]
sync = ["google-generativeai>=0.8", "keyring>=25"]
dev = ["pytest>=8", "google-generativeai>=0.8", "keyring>=25"]

[project.urls]
Homepage = "https://floom.dev/fbrain"
Repository = "https://github.com/floomhq/fbrain"
Issues = "https://github.com/floomhq/fbrain/issues"
"Legacy Homepage" = "https://icontext.floom.dev"

[project.scripts]
fbrain = "cli:main"
icontext = "cli:_deprecated_main"

[tool.setuptools]
py-modules = ["cli"]
packages = ["connectors"]

[tool.setuptools.package-data]
"*" = ["skills/**/SKILL.md"]
